# claudeai-bundle

./: Cargo.toml  Cross.toml  Dockerfile.scratch  README.md
.github/workflows/: build-package.yml
examples/: commented_tree.txt  complex_tree.txt  example.rs  sample_tree.txt  simple_tree.txt  tree_with_contents_helm.txt  tree_with_contents_rust.txt
src/: error.rs  filesystem.rs  fsnode.rs  lib.rs  main.rs
tests/: parse_tree.rs  parse_tree_with_blank_line.rs  parse_tree_with_comment_prefix.rs  parse_tree_with_file_contents.rs  parse_with_double_slash_comment.rs  skip_file_structure_line.rs
